cros: Focus login password textfield on focus.

Bug: 796498
Change-Id: I50eaf6cf5e65e3b5677d1f37002da063022a3a7a